# docs/swagger.json
@@ -44,7 +44,7 @@
                 "tags": [
                     "Categories"
                 ],
-                "summary": "Create a new category",
+                "summary": "Update a new category",
                 "parameters": [
                     {
                         "description": "Category body",
@@ -223,14 +223,14 @@
                 "tags": [
                     "IngredientIDs"
                 ],
-                "summary": "GetAll all ingredients",
+                "summary": "Get all ingredients",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Ingredient"
+                                "$ref": "#/definitions/dto.IngredientResponse"
                             }
                         }
                     },
@@ -258,12 +258,12 @@
                 "summary": "Create a new ingredient",
                 "parameters": [
                     {
-                        "description": "IngredientRequest body",
+                        "description": "Ingredient body",
                         "name": "ingredient",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Ingredient"
+                            "$ref": "#/definitions/dto.IngredientRequest"
                         }
                     }
                 ],
@@ -271,7 +271,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/model.Ingredient"
+                            "$ref": "#/definitions/dto.IngredientResponse"
                         }
                     },
                     "400": {
@@ -303,11 +303,11 @@
                 "tags": [
                     "IngredientIDs"
                 ],
-                "summary": "GetAll ingredient by ID",
+                "summary": "Get ingredient by ID",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "IngredientRequest ID",
+                        "description": "Ingredient ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -317,11 +317,76 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Ingredient"
+                            "$ref": "#/definitions/dto.IngredientResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "IngredientIDs"
+                ],
+                "summary": "Update ingredient by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Ingredient ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Ingredient body",
+                        "name": "ingredient",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.IngredientRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.IngredientResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -339,7 +404,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "IngredientRequest ID",
+                        "description": "Ingredient ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -637,6 +702,34 @@
                 }
             }
         },
+        "dto.IngredientRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.IngredientResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.RecipeIngredientRequest": {
             "type": "object",
             "properties": {
@@ -682,6 +775,12 @@
                 "cook_time_min": {
                     "type": "integer"
                 },
+                "energy": {
+                    "type": "integer"
+                },
+                "fat": {
+                    "type": "number"
+                },
                 "image_url": {
                     "type": "string"
                 },
@@ -696,6 +795,9 @@
                 },
                 "prep_time_min": {
                     "type": "integer"
+                },
+                "protein": {
+                    "type": "number"
                 },
                 "title": {
                     "type": "string"
@@ -713,6 +815,12 @@
                 },
                 "created_at": {
                     "type": "string"
+                },
+                "energy": {
+                    "type": "integer"
+                },
+                "fat": {
+                    "type": "number"
                 },
                 "id": {
                     "type": "string"
@@ -732,21 +840,10 @@
                 "prep_time_min": {
                     "type": "integer"
                 },
+                "protein": {
+                    "type": "number"
+                },
                 "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.Ingredient": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                },
-                "imageUrl": {
-                    "type": "string"
-                },
-                "name": {
                     "type": "string"
                 }
             }
